apps/portainer-agent/networkpolicy.yml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: portainer-agent
spec:
  endpointSelector:
    matchLabels:
      app: portainer-agent
  ingress:
    - fromCIDRSet:
        - cidr: 100.64.7.73/32
      toPorts:
        - ports:
            - port: "9001"
